Fix spacing on exp page

--- a/styles.css
+++ b/styles.css
@@ -27,10 +27,8 @@ body {
 
 /* Main Containers Styling */
 .main-container {
-
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
 }
 .grid-container {
@@ -61,18 +59,29 @@ h1 {
   width: 80vw;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 .menu-item { 
   font-size: 14px;
   text-align: center;
+  margin: 15px;
+}
+/* Color Swatch Styling */
+.colorPicker::-webkit-color-swatch {
+  border-radius: 10%;
+}
+.colorPicker {
+  background: none;
+  border: none;
+  height: 35px;
+  width: 35px;
 }
 
 .color-select {
   display: flex;
   align-items: center;
 }
-
 
 /* ----- Pen Slider Styling ----- */
 .slidecontainer {
@@ -110,22 +119,10 @@ h1 {
 }
 
 
-/* Color Swatch Styling */
-.colorPicker::-webkit-color-swatch {
-  border-radius: 10%;
-}
-.colorPicker {
-  background: none;
-  border: none;
-  height: 25px;
-  width: 25px;
-}
-
-
 /* Button Styling */
 .menu-btn {
   height: 50px;
-  background-image: linear-gradient(-180deg, #37AEE2 0%, #1E96C8 100%);
+  background-image: linear-gradient(-180deg, #0d2230 0%, #063250 100%);
   border-radius: .5rem;
   box-sizing: border-box;
   color: #FFFFFF;
@@ -133,16 +130,17 @@ h1 {
   font-size: 16px;
   align-items: center;
   justify-content: center;
-  padding: 1rem 1rem;
+  padding: .7rem .7rem;
   text-decoration: none;
   border: 0;
   cursor: pointer;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  font-family: "Rubik Mono One";
 }
 .menu-btn:hover {
-  background-image: linear-gradient(-180deg, #1D95C9 0%, #17759C 100%);
+  background-image: linear-gradient(-180deg, #1D95C9 0%, #063250 100%);
 }
 @media (min-width: 768px) {
   .menu-btn {
@@ -150,17 +148,42 @@ h1 {
   }
 }
 
-
 /* Footer Styling */
 footer {
   width: 70vw;
   font-size: 10px;
   display: flex;
   justify-content: space-between;
+  bottom: 0;
+  position: relative;
 }
 
 
 /* ----- Main Media Queries ----- */
+@media (max-width: 600px) {
+  h1 {
+    font-size: 32px;
+  }
+  footer {
+    width: 95vw;
+  }
+}
+@media (max-width: 440px) {
+  .menu {
+    flex-direction: column;
+  }
+  h1 {
+    font-size: 24px;
+  }
+  footer {
+    font-size: 8px;
+  }
+}
+@media (max-width: 400px) {
+  .exp-footer {
+    font-size: 6px;
+  }
+}
 @media (min-width: 1000px) {
   .grid-container {
     width: 800px;
@@ -175,94 +198,40 @@ footer {
 #exp-h1 {
   margin: 25px;
 }
-
 #exp-h3 {
   margin: 25px;
 }
-
-
 #exp-body {
   background-color: rgb(22, 18, 18);
   color: #eaf8f3;
   text-align: center;
+  height: 100%;
+  width: 100%;
 }
-
 .experimental-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-
-
-
+/* ----- Prompt Text Input ----- */
 :root {
-  /* generic */
-  --gutterSm: 0.4rem;
-  --gutterMd: 0.8rem;
-  --gutterLg: 1.6rem;
-  --gutterXl: 2.4rem;
-  --gutterXx: 7.2rem;
-  --colorPrimary400: #7e57c2;
-  --colorPrimary600: #5e35b1;
-  --colorPrimary800: #4527a0;
-  --fontFamily: "Dosis", sans-serif;
-  --fontSizeSm: 1.2rem;
-  --fontSizeMd: 1.6rem;
-  --fontSizeLg: 2.1rem;
-  --fontSizeXl: 2.8rem;
-  --fontSizeXx: 3.6rem;
-  --lineHeightSm: 1.1;
-  --lineHeightMd: 1.8;
-  --transitionDuration: 300ms;
-  --transitionTF: cubic-bezier(0.645, 0.045, 0.355, 1);
-  
-  /* floated labels */
-  --inputPaddingV: var(--gutterMd);
-  --inputPaddingH: var(--gutterLg);
-  --inputFontSize: var(--fontSizeLg);
-  --inputLineHeight: var(--lineHeightMd);
-  --labelScaleFactor: 0.8;
-  --labelDefaultPosY: 50%;
+  --inputPaddingV: 0.8rem; 
+  --inputFontSize: 2.1rem; 
+  --inputLineHeight: 1.8; 
+  --labelScaleFactor: 0.8; 
+  --labelDefaultPosY: 50%; 
   --labelTransformedPosY: calc(
     (var(--labelDefaultPosY)) - 
     (var(--inputPaddingV) * var(--labelScaleFactor)) - 
     (var(--inputFontSize) * var(--inputLineHeight))
   );
-  --inputTransitionDuration: var(--transitionDuration);
-  --inputTransitionTF: var(--transitionTF);
 }
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 10px;
-}
-
-/* body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  width: 100vw;
-  height: 100vh;
-  color: #455A64;
-  background-color: #7E57C2;
-  font-family: var(--fontFamily);
-  font-size: var(--fontSizeMd);
-  line-height: var(--lineHeightMd);
-} */
-
 .wrapper {
   flex: 0 0 80%;
   max-width: 80%;
   margin-bottom: 50px;
 }
-
 .title {
   margin: 40px;
   padding: 0;
@@ -272,37 +241,31 @@ html {
   text-align: center;
   text-shadow: -0.1rem 0.1rem 0.2rem #6bc257;
 }
-
 .input {
   position: relative;
   color: #0c0d0d;
 }
-
-
 .Input-text {
   display: block;
   margin: 0;
-  padding: var(--inputPaddingV) var(--inputPaddingH);
+  padding: 0.8rem 1.6rem;
   color: inherit;
   width: 100%;
   font-family: inherit;
-  font-size: 2.1rem;
+  font-size: 1.6rem;
   font-weight: inherit;
-  line-height: var(--inputLineHeight);
+  line-height: 1.8;
   border: none;
   border-radius: 0.4rem;
-  transition: box-shadow var(--transitionDuration);
+  transition: box-shadow 300ms;
 }
-
 .Input-text::placeholder {
   color: #d0dadf;
 }
-
 .Input-text:focus {
   outline: none;
   box-shadow: 0.2rem 0.8rem 1.6rem #6bc257;
 }
-
 .Input-label {
   display: block;
   position: absolute;
@@ -312,24 +275,22 @@ html {
   font-family: inherit;
   font-size: 12px;
   font-weight: inherit;
-  line-height: var(--inputLineHeight);
+  line-height: 1.8;
   opacity: 0;
   transform: 
-    translate3d(0, var(--labelDefaultPosY), 0)
+    translate3d(0, 50%, 0)
     scale(1);
   transform-origin: 0 0;
   transition:
-    opacity var(--inputTransitionDuration) var(--inputTransitionTF),
-    transform var(--inputTransitionDuration) var(--inputTransitionTF),
-    visibility 0ms var(--inputTransitionDuration) var(--inputTransitionTF),
-    z-index 0ms var(--inputTransitionDuration) var(--inputTransitionTF);
+    opacity 300ms cubic-bezier(0.645, 0.045, 0.355, 1),
+    transform 300ms cubic-bezier(0.645, 0.045, 0.355, 1),
+    visibility 0ms 300ms cubic-bezier(0.645, 0.045, 0.355, 1),
+    z-index 0ms 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
-
 .Input-text:placeholder-shown + .Input-label {
   visibility: hidden;
   z-index: -1;
 }
-
 .Input-text:not(:placeholder-shown) + .Input-label,
 .Input-text:focus:not(:placeholder-shown) + .Input-label {
   visibility: visible;
@@ -337,9 +298,9 @@ html {
   opacity: 1;
   transform:
     translate3d(0, var(--labelTransformedPosY), 0)
-    scale(var(--labelScaleFactor));
+    scale(0.8);
   transition:
-    transform var(--inputTransitionDuration),
+    transform 300ms,
     visibility 0ms,
     z-index 0ms;
 }
